vlib/v/checker/tests/import_mod_sub_duplicate_as_mod.vv
module json2

import x.json2 as json

any := json.Any(json.null)

println(any)
